added china and india news links

--- a/msg.html
+++ b/msg.html
@@ -1,4 +1,4 @@
-<a class="rssfeed" href="http://www.pfie.com/XmlServers/navsectionRSS.aspx?navsectioncode=3190">
+<h2>SouthEast Asia</h2><br><a class="rssfeed" href="http://www.pfie.com/XmlServers/navsectionRSS.aspx?navsectioncode=3190">
  <span>
   RSS feed for Southeast Asia
  </span>
@@ -45,4 +45,40 @@
  Govt agrees higher tariff for hydros
 </a><br><a href="http://www.pfie.com/medco-energi-signs-deal-for-aceh-block-a/21301743.article">
  Medco Energi signs deal for Aceh Block A
+</a><br><br><h2>China</h2><br><a href="http://www.pfie.com/asia-pacific/china-and-east-asia/">
+ China &amp; East Asia
+</a><br><a href="http://www.pfie.com/vinci-team-wins-kobe-airport/21301970.article">
+ Vinci team wins Kobe airport
+</a><br><a href="http://www.pfie.com/kdb-to-invest-in-airport/21301830.article">
+ KDB to invest in airport
+</a><br><a href="http://www.pfie.com/amp-solar-group-secures-solar-pf/21301829.article">
+ AMP Solar Group secures solar PF
+</a><br><a href="http://www.pfie.com/zhejiang-launches-offshore-loan/21301827.article">
+ Zhejiang launches offshore loan
+</a><br><a href="http://www.pfie.com/castle-peak-refinances/21301826.article">
+ Castle Peak refinances
+</a><br><a href="http://www.pfie.com/fit-feeds-solar-boom/21301825.article">
+ FiT feeds solar boom
+</a><br><br><h2>India</h2><br><a href="http://www.pfie.com/asia-pacific/india-and-south-asia/">
+ India &amp; South Asia
+</a><br><a href="http://www.pfie.com/greenko-raises-us1bn-of-bonds/21301940.article">
+ Greenko raises US$1bn of bonds
+</a><br><a href="http://www.pfie.com/sapphire-enters-wind-sector/21301948.article">
+ Sapphire enters wind sector
+</a><br><a href="http://www.pfie.com/sachal-wind-in-operation/21301946.article">
+ Sachal wind in operation
+</a><br><a href="http://www.pfie.com/turkeys-zorlu-to-build-200mw-solar-parks/21301945.article">
+ Turkey's Zorlu to build 200MW solar parks
+</a><br><a href="http://www.pfie.com/azure-power-continuun-go-for-bonds-too/21301942.article">
+ Azure Power, Continuun go for bonds too
+</a><br><a href="http://www.pfie.com/new-low-bid-for-solar/21301939.article">
+ New low bid for solar
+</a><br><a href="http://www.pfie.com/ppas-signed-for-first-wind-auction/21301938.article">
+ PPAs signed for first wind auction
+</a><br><a href="http://www.pfie.com/k-electric-plans-900mw-power-plant/21301936.article">
+ K-Electric plans 900MW power plant
+</a><br><a href="http://www.pfie.com/ppp-model-mulled-for-mining-industry/21301763.article">
+ PPP model mulled for mining industry
+</a><br><a href="http://www.pfie.com/ifc-to-invest-us6bn-in-indian-renewables/21301762.article">
+ IFC to invest US$6bn in Indian renewables
 </a><br>
