--- a/msg.html
+++ b/msg.html
@@ -1,4 +1,4 @@
-<h2>SouthEast Asia</h2><br><a class="rssfeed" href="http://www.pfie.com/XmlServers/navsectionRSS.aspx?navsectioncode=3190">
+<h2>SouthEast Asia</h2><a class="rssfeed" href="http://www.pfie.com/XmlServers/navsectionRSS.aspx?navsectioncode=3190">
  <span>
   RSS feed for Southeast Asia
  </span>
@@ -45,7 +45,7 @@
  Govt agrees higher tariff for hydros
 </a><br><a href="http://www.pfie.com/medco-energi-signs-deal-for-aceh-block-a/21301743.article">
  Medco Energi signs deal for Aceh Block A
-</a><br><br><h2>China</h2><br><a href="http://www.pfie.com/asia-pacific/china-and-east-asia/">
+</a><br><br><h2>China</h2><a href="http://www.pfie.com/asia-pacific/china-and-east-asia/">
  China &amp; East Asia
 </a><br><a href="http://www.pfie.com/vinci-team-wins-kobe-airport/21301970.article">
  Vinci team wins Kobe airport
@@ -59,7 +59,7 @@
  Castle Peak refinances
 </a><br><a href="http://www.pfie.com/fit-feeds-solar-boom/21301825.article">
  FiT feeds solar boom
-</a><br><br><h2>India</h2><br><a href="http://www.pfie.com/asia-pacific/india-and-south-asia/">
+</a><br><br><h2>India</h2><a href="http://www.pfie.com/asia-pacific/india-and-south-asia/">
  India &amp; South Asia
 </a><br><a href="http://www.pfie.com/greenko-raises-us1bn-of-bonds/21301940.article">
  Greenko raises US$1bn of bonds
